# llvm-mos-sdk-eater

examples/: CMakeLists.txt
examples/geckos/: CMakeLists.txt  hello-argv.c
mos-platform/: CMakeLists.txt
mos-platform/geckos/: CMakeLists.txt  call-main.c  chrin.c  chrin_no_wait.c  chrout.c  clang.cfg  crt0.S  getchar.c  link.ld  putchar.c
mos-platform/geckos/lib6502/: README.md  k_accept.S  k_chdir.S  k_connect.S  k_cwd.S  k_dup.S  k_exec.S  k_fclose.S  k_fcmd.S  k_fcntl.S  k_fgetc.S  k_fopen.S  k_fopendir.S  k_forkthread.S  k_forkto.S  k_fputc.S  k_fread.c  k_fread2.S  k_freaddir.S  k_free.S  k_fseek.c  k_fseek2.S  k_fwrite.c  k_fwrite2.S  k_getenv.S  k_getenvp.S  k_getos.S  k_getpid.S  k_kill.S  k_listen.S  k_malloc.S  k_pipe.S  k_psem.S  k_putenv.S  k_realloc.S  k_semfre.S  k_semget.S  k_sendsignal.S  k_signal.S  k_stddup.S  (+5 more)
